--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ plugins {
 android {
     compileSdk 31
 
+    buildFeatures {
+        dataBinding = true
+
+    }
+
     defaultConfig {
         applicationId "org.techtown.colosseum"
         minSdk 21
